Optimized accordion data loading.
Specific data is only fetched when accordion toggle is triggered
